Optimize gas limits per PoCo function